--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "telegram-bot",
     "coc-api"
   ],
-  "author": "Seu Nome",
+  "author": "Daniel Mazzeu",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.8.4",
