--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "moment-timezone": "^0.5.48",
     "telegraf": "^4.16.3",
     "utf8": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
